优化自定义工作项的表格